# uproteins

./: README.md  pyproject.toml  requirements.txt
src/: main.py  peptide_search.py  percolator.py  search_engine.py  utils.py  working_runs.py
src/cli/: __init__.py  _types.py  parser.py  validators.py
src/database/: database_generator.py
src/pipelines/: pms.py
src/postprocess/: extinfo.py  specfilt.py
src/sequtils/: locus.py
src/sequtils/postsearch/: coverage.py  formatdata.py
tests/: conftest.py  pytest.ini  test_assembly.py  test_database.py  test_ms.py  test_parser.py  test_postms.py  test_run.py
