[project]
name = "uproteins"
version = "1.4.0"
description = ""
authors = [
    {name = "Cristiano Valim Bizarro", email = "cristiano.bizarro@pucrs.br"},
    {name = "Eduardo Vieira de Souza", email = "esvieira.bioinfo@gmail.com"},
    {name = "Adriana Canedo", email = "miranda.adriana@edu.pucrs.br"},
    {name = "Bruno Maestri Abrianos Becker", email = "bruno.maestri@edu.pucrs.br"}
]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "biopython (>=1.85,<2.0)",
    "venn (>=0.1.3,<0.2.0)",
    "regex (>=2024.11.6,<2025.0.0)",
    "pandas (>=1.5.3,<2.0.0)",
    "numpy (>=1.19.3,<2.0.0)",
    "scikit-learn (==1.2.1)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "matplotlib-venn (>=1.1.2,<2.0.0)",
]

[project.optional-dependencies]
cli = [ "pyfiglet>=1.0.2" ]
test = [
    "pytest>=8.4.1,<9.0.0",
    "snakeviz>=2.2.2,<3.0.0",
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
testpaths = [ "tests" ]
markers = [
    "assembly: mark as assembly step test",
    "database: mark as database step test",
    "ms: mark as ms step test",
    "postms: mark as postms step test",
    "validate: mark as validate step test",
    "fullrun: mark as a full run test",
    "parser: mark as a parser test",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
